infrastructure/security/trivy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trivy-server
  labels:
    app.kubernetes.io/name: trivy-server
spec:
  ingressClassName: traefik
  rules:
  - host: ${trivyHostName}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: trivy-service
            port:
              number: 4954
  tls: []
